Get low resolution snapshot
